anotações adicionadas
